--- a/Cargo.toml
+++ b/Cargo.toml
@@ -6,10 +6,10 @@ edition = "2021"
 
 [dependencies]
 ruc = "1.0"
-rand_chacha = "0.2"
-rand_core = { version = "0.5", default-features = false, features = ["alloc"] }
+rand_chacha = "0.3"
+rand_core = { version = "0.6", default-features = false, features = ["alloc"] }
 linear-map = {version = "1.2.0", features = ["serde_impl"] }
 serde = "1.0.124"
 serde_derive = "1.0"
 wasm-bindgen = { version = "=0.2.73", features = ["serde-serialize"]  }
-zei = { git = "https://github.com/FindoraNetwork/zei", branch = "stable-main" }
+noah  = { git = "https://github.com/FindoraNetwork/noah", tag = "v0.3.2" }
